[package]
name = "diceroll"
description = "A command-line dice roller."
license = "MIT"
version = "1.0.3"
authors = ["Jesse B. Hannah <jesse@jbhannah.net>"]
edition = "2021"

[dependencies]
cfg-if = "1.0"
clap = { version = "4", features = ["derive", "cargo"] }
lazy_static = "1"
mockall = "0.12"
rand = "0.9.0-alpha"
regex = "1"
